[gd_scene load_steps=7 format=3 uid="uid://dd147s3gtkprx"]

[ext_resource type="Script" path="res://Assets/Scripts/DrinkStationScripts/portafilter.gd" id="1_chd5a"]
[ext_resource type="Script" path="res://Assets/Scripts/ComponentScripts/dragDropComponent.gd" id="2_ptofa"]
[ext_resource type="Script" path="res://Assets/Scripts/ComponentScripts/portafilterOzComponent.gd" id="3_ib3ny"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ibdxk"]
size = Vector2(64, 84)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_j2noq"]
size = Vector2(65, 85)

[sub_resource type="LabelSettings" id="LabelSettings_p7yvh"]
font_size = 50
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="portafilter" type="Node2D" node_paths=PackedStringArray("dragDrop_component", "oz_component")]
script = ExtResource("1_chd5a")
dragDrop_component = NodePath("drag_drop_component")
oz_component = NodePath("filter_oz_component")

[node name="drag_drop_component" type="Area2D" parent="." node_paths=PackedStringArray("parent")]
collision_layer = 2
collision_mask = 4
monitorable = false
script = ExtResource("2_ptofa")
parent = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="drag_drop_component"]
shape = SubResource("RectangleShape2D_ibdxk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_j2noq")

[node name="filter_oz_component" type="Node" parent="." node_paths=PackedStringArray("filter", "label")]
script = ExtResource("3_ib3ny")
filter = NodePath("..")
label = NodePath("../Label")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_top = 17.0
offset_right = 29.0
offset_bottom = 89.0
grow_horizontal = 2
text = "30"
label_settings = SubResource("LabelSettings_p7yvh")
horizontal_alignment = 1

[connection signal="area_entered" from="drag_drop_component" to="drag_drop_component" method="_on_area_entered"]
[connection signal="area_exited" from="drag_drop_component" to="drag_drop_component" method="_on_area_exited"]
[connection signal="dropped" from="drag_drop_component" to="." method="_on_drag_drop_component_dropped"]
[connection signal="mouse_entered" from="drag_drop_component" to="drag_drop_component" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="drag_drop_component" to="drag_drop_component" method="_on_mouse_exited"]
